# xaas-containers

./: LICENSE  README.md  pyproject.toml
.github/workflows/: linting.yml
configs/: gromacs.yml  gromacs_deploy.yml  lulesh.yml  lulesh_deploy.yml
dockerfiles/: Dockerfile.base-debian13  Dockerfile.builder  Dockerfile.builder-19-cross  Dockerfile.builder-19-dev  Dockerfile.builder-debian13-llvm19  Dockerfile.builder-dev  Dockerfile.compiler-debian13-llvm19  Dockerfile.cuda  Dockerfile.cuda-arm  Dockerfile.features-analyzer  Dockerfile.features-analyzer-dev  Dockerfile.llvm  Dockerfile.llvm-19-dev  Dockerfile.llvm.19  Dockerfile.mpich  Dockerfile.oneapi  Dockerfile.openmp-finder  Dockerfile.openmp-finder-dev  Dockerfile.runner-19  Dockerfile.runner-debian13-llvm19  Dockerfile.runner.19  Dockerfile.runner.19-dev  build-images.sh  entrypoint.sh
dockerfiles/layers/: Dockerfile.cuda  Dockerfile.fftw3  Dockerfile.mpich  Dockerfile.oneapi
dockerfiles/old/: Dockerfile.builder-19  Dockerfile.builder-19-cross  Dockerfile.llvm-19
dockerfiles/tools/: CMakeLists.txt  omp_finder.cpp
dockerfiles/tools/llvm-features/: CMakeLists.txt  features-pass.cpp
docs/: ir-containers.md  overview.md
tests/: test_config.py  test_runconfig.py
tools/: README.md  system_discovery.py
xaas/: cli.py  config.py  docker.py
xaas/actions/: action.py  analyze.py  build.py  container.py  cpu_tuning.py  deployment.py  docker.py  ir.py  preprocess.py
xaas/config/: layers.yml  system.yaml
xaas/source/: applications.py  checker.py  container.py  dockerfile_creator.py  gemini_interface.py  system_discovery.py  utils.py
xaas/source-container/: README.md  dockerfile_creator.py  gemini_interface.py  run.py  setup.sh  system_discovery.py  utils.py
xaas/source-container/projects_specialization_points/: cloudsc.json  llama.cpp.json  milc.json  openqcd.json
xaas/specialization-points/: icon-model.json  llama.cpp.json  q-e.json  vpic-kokkos.json  wrf.json
xaas/util/: dict_utils.py  dockerfile.py
