[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xaas"
version = "0.0.0"
description = "XaaS (Acceleration as a Service) - build performance-portable containers"
readme = "README.md"
authors = [
    {name = "Marcin Copik", email = "mcopik@gmail.com"}
]
license = {text = "BSD 3"}
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
    "click>=8.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.10.0",
    "pre-commit>=3.0.0",
    "mypy>=1.0.0",
    "isort>=6.0",
    "types-PyYAML>=6.0"
]

[project.scripts]
xaas = "xaas.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["xaas"]

[tool.black]
line-length = 100
target-version = ["py310"]
include = '\.pyi?$'

[tool.ruff]
target-version = "py310"
line-length = 100
lint.select = [
    "A",  # flake8-builtins
    "B",  # flake8-bugbear
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "C4", # flake8-comprehensions
    "N",  # pep8-naming
    "SIM",# flake8-simplify,
    "UP"  # pyupgrade
]
lint.ignore = []

[tool.isort]
profile = "black"
known_first_party = ["xaas"]
force_single_line = "true"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = true

